<resources>
    <string name="app_name">SherlockDroid</string>
    <string name="main_title">SherlockDroid</string>
    <string name="tapjacking">TapJacking</string>
    <string name="exportedActivity">Activity Exported</string>
    <string name="exportedReceiver">Receiver Exported</string>
    <string name="exportedService">Service Exported</string>
    <string name="contentURI">Content URI</string>
    <string name="loadButtonText">Load Resources</string>
    <string name="ContentProvider">Content Provider Exploiting</string>
    <string name="Activity">Activity Exploiting</string>
    <string name="ContentURI1">Path Traversal via Content URI</string>
    <string name="Activity1">WebView via Activity</string>
    <string name="Activity2">Classic Exploting Activity</string>
    <string name="ContentURI2">Query DB via Content URI</string>
    <string name="ExternalMemory">Read External Memory</string>
    <string name="tap_jacking_text">This application demonstrates TapJacking.</string>
</resources>