<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <RelativeLayout android:layout_height="wrap_content"
        android:layout_width="wrap_content">

        <TextView
            android:layout_width="339dp"
            android:layout_height="68dp"
            android:text="@string/main_title"
            android:textSize="32sp"
            android:textColor="@color/black"/>
    </RelativeLayout>

    <Button
        android:id="@+id/ButtonTapjacking"
        android:layout_width="150dp"
        android:layout_height="100dp"
        android:layout_marginLeft="-300dp"
        android:layout_marginTop="100dp"
        android:text="@string/tapjacking"
        />

    <Button
        android:id="@+id/ExportedActivity"
        android:layout_width="150dp"
        android:layout_height="100dp"
        android:layout_marginLeft="-150dp"
        android:layout_marginTop="210dp"
        android:text="@string/exportedActivity"
        />

    <Button
        android:id="@+id/ExportedReceiver"
        android:layout_width="150dp"
        android:layout_height="100dp"
        android:layout_marginLeft="-150dp"
        android:layout_marginTop="330dp"
        android:text="@string/exportedReceiver"
        />

    <Button
        android:id="@+id/ExportedService"
        android:layout_width="150dp"
        android:layout_height="100dp"
        android:layout_marginLeft="-150dp"
        android:layout_marginTop="450dp"
        android:text="@string/exportedService"
        />

    <Button
        android:id="@+id/ContentURI"
        android:layout_width="150dp"
        android:layout_height="100dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="100dp"
        android:text="@string/contentURI"
        />



</LinearLayout>